bugfix-intro background overflowing into featured section

--- a/src/index.css
+++ b/src/index.css
@@ -86,9 +86,9 @@ h3{
 .intro-side-img{
   display: none;
   position: absolute;
-  opacity: 0.64;
-  height: 800px;
-  top: 200px;
+  opacity: 0.84;
+  height: 970px;
+  top: 0;
 }
 .intro-section{
   width: 85vw;
@@ -1146,7 +1146,7 @@ th,td{
     display: block;
   }
   .left-side{
-    left: -700px;
+    left: -880px;
   }
   .right-side{
     right: 0;
@@ -1161,11 +1161,14 @@ th,td{
   }
 }
 @media screen and (min-width: 1950px) {
+  .main > h3{
+    margin-top: 3rem;
+  }
   .intro-side-img{
     display: block;
   }
   .left-side{
-    left: -620px;
+    left: -810px;
   }
   .right-side{
     right: 0;
